<resources>
    <string name="app_name">MyProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HowAreYou">Как прошёл день?</string>
    <string name="Calculate">Вычислить</string>
    <string name="YourGrade">В каком вы классе?</string>
    <string name="Math">Математика</string>
    <string name="English">English Language</string>
    <string name="RussianL">Русский язык</string>
    <string name="Informatics">Информатика</string>
    <string name="Img">TODO</string>
    <string name="settings">Settings</string>
    <string-array name="grades">
        <item>Младшая школа</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="subjects">
        <item>Математика</item>
        <item>Информатика</item>
        <item>Английский язык</item>
        <item>Русский язык</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>