<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#211400"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#211400"
        android:backgroundTint="#211400"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView03"
            android:layout_width="341dp"
            android:layout_height="203dp"
            android:layout_marginTop="292dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rectangle_18" />

        <ImageView
            android:id="@+id/imageView04"
            android:layout_width="340dp"
            android:layout_height="104dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView03"
            app:srcCompat="@drawable/rectangle_2" />

        <ImageButton
            android:id="@+id/btnRussian"
            android:layout_width="175dp"
            android:layout_height="158dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMath"
            app:layout_constraintTop_toBottomOf="@+id/imageView04"
            app:srcCompat="@drawable/rectangle_28" />

        <ImageButton
            android:id="@+id/btnMath"
            android:layout_width="175dp"
            android:layout_height="158dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/btnRussian"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView04"
            app:srcCompat="@drawable/rectangle_28" />

        <ImageButton
            android:id="@+id/imageButton03"
            android:layout_width="175dp"
            android:layout_height="158dp"
            android:layout_marginTop="192dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/imageButton04"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView04"
            app:srcCompat="@drawable/rectangle_28" />

        <ImageButton
            android:id="@+id/imageButton04"
            android:layout_width="175dp"
            android:layout_height="158dp"
            android:layout_marginTop="192dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton03"
            app:layout_constraintTop_toBottomOf="@+id/imageView04"
            app:srcCompat="@drawable/rectangle_28" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="409dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton03"
            app:srcCompat="@drawable/low_flowers" />

        <ImageButton
            android:id="@+id/imageButton05"
            android:layout_width="152dp"
            android:layout_height="58dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton04"
            app:srcCompat="@drawable/rectangle_21" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/high_flowers" />

        <TextView
            android:id="@+id/textView90"
            android:layout_width="210dp"
            android:layout_height="67dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="120dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/secondfont"
            android:foregroundTint="#00FFFFFF"
            android:text="@string/HowAreYou"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView03"
            app:layout_constraintTop_toTopOf="@+id/imageView03" />

        <ImageView
            android:id="@+id/imageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rectangle_29" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="69dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="48dp"
            android:text="@string/Calculate"
            android:fontFamily="@font/secondfont"
            app:layout_constraintEnd_toEndOf="@+id/imageButton05"
            app:layout_constraintTop_toTopOf="@+id/imageButton05" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ellipse_9__1_" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView03"
            app:layout_constraintStart_toStartOf="@+id/imageView03"
            app:srcCompat="@drawable/rectangle_31" />

        <HorizontalScrollView
            android:layout_width="339dp"
            android:layout_height="104dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView03"
            app:layout_constraintEnd_toEndOf="@+id/imageView03"
            app:layout_constraintStart_toStartOf="@+id/imageView03">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="202dp"
            android:layout_height="64dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/secondfont"
            android:text="@string/YourGrade"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintTop_toBottomOf="@+id/imageView03" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/imageView04"
            app:layout_constraintTop_toTopOf="@+id/imageView04"
            app:srcCompat="@drawable/group_1"
            android:contentDescription="@string/Img" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="115dp"
            android:layout_height="68dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/secondfont"
            android:text="@string/Math"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/btnMath"
            app:layout_constraintTop_toTopOf="@+id/btnMath" />

        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="408dp"
            android:layout_height="1100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp">

        </FrameLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="145dp"
            android:layout_height="83dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/secondfont"
            android:text="@string/English"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/btnRussian"
            app:layout_constraintTop_toTopOf="@+id/btnRussian" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="115dp"
            android:layout_height="68dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/secondfont"
            android:text="@string/RussianL"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageButton03"
            app:layout_constraintTop_toTopOf="@+id/imageButton03" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="117dp"
            android:layout_height="68dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/secondfont"
            android:text="@string/Informatics"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageButton04"
            app:layout_constraintTop_toTopOf="@+id/imageButton04" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="76dp"
            android:layout_height="75dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:entries="@array/grades"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/imageButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>